[package]
name = "hyperlight-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
include = ["*"] # Make sure wasm_runtime is included!

[lib]
name = "hyperlight_wasm"
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "helloworld"
path = "examples/helloworld/main.rs"
test = true

[[example]]
name = "hostfuncs"
path = "examples/hostfuncs/main.rs"
test = true

[[example]]
name = "rust_wasm_examples"
path = "examples/rust_wasm_examples/main.rs"
test = true

[[example]]
name = "metrics"
path = "examples/metrics/main.rs"
test = true

[dependencies]
hyperlight-host = { workspace = true }
libc = { version = "0.2.171" }
once_cell = "1.21.1"
strum = "0.27"
tracing = "0.1.27"
log = "0.4.26"
cfg-if = { version = "1" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Threading",
] }
page_size = "0.6.0"

[dev-dependencies]
examples_common = { path = "../examples_common" }
criterion = { version = "0.5.1", features = ["html_reports"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
crossbeam-queue = "0.3"
blake3 = "1.7"
toml = "0.8.19"

[build-dependencies]
chrono = "0.4"
blake3 = "1.7"
built = { version = "0.7.7", features = ["chrono", "git2"] }
anyhow = { version = "1.0" }
goblin = "0.9.3"

[features]
default = ["function_call_metrics", "kvm", "mshv2"]
function_call_metrics = ["hyperlight-host/function_call_metrics"]
seccomp = ["hyperlight-host/seccomp"]
print_debug = ["hyperlight-host/print_debug"]
crashdump = ["hyperlight-host/crashdump"]
kvm = ["hyperlight-host/kvm"]
mshv2 = ["hyperlight-host/mshv2"]
mshv3 = ["hyperlight-host/mshv3"]
inprocess = ["hyperlight-host/inprocess"]

[[bench]]
name = "benchmarks"
harness = false
