[package]
name = "hyperlight-wasm-macro"
version = "0.1.0"
edition = "2021"
description = """
Procedural macros to generate Hyperlight Wasm host and guest bindings from component types
"""

[lib]
name = "hyperlight_wasm_macro"
proc-macro = true

[dependencies]
wasmparser = { version = "0.224.0" }
quote = { version = "1.0.38" }
proc-macro2 = { version = "1.0.93" }
syn = { version = "2.0.96" }
itertools = { version = "0.14.0" }
prettyplease = { version = "0.2.31" }
hyperlight-component-util = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "hyperlight-component-macro" }