[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm_runtime"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "hyperlight-component-macro", default-features = false }
hyperlight-guest = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "hyperlight-component-macro", features = [ "printf" ] }
wasmtime = { version = "30.0.2", default-features = false, features = [ "runtime", "custom-virtual-memory", "custom-native-signals", "component-model" ] }
hyperlight-wasm-macro = { path = "../hyperlight_wasm_macro" }
spin = "0.9.8"

[build-dependencies]
cc = "1.2"
cfg-if = { version = "1" }
cargo_metadata = "0.19"
reqwest =  {version = "0.12", default-features = false, features = ["blocking","rustls-tls"] }
